feat: 로그인 기능 구현
- 로그인 화면 구현
- 로그인 API 연동

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">MyOT</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string name="signup_login_guide">이미 계정이 있으신가요? 로그인하기</string>
 </resources>
